[S] Start new Rubik's Cube project, core design

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.6)
 project(rubik)
 
-add_executable(rubik main.cpp)
+add_executable(rubik rubik_alg.cpp rubik_ui.cpp auxiliary.cpp rubik.cpp cube_topology.cpp main.cpp)
 
 install(TARGETS rubik RUNTIME DESTINATION bin)
